Fri Jun 20 12:09:53 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * examples/IPC_SAP/SSL_SAP/SSL-client-simple.cpp:
        * examples/IPC_SAP/SSL_SAP/SSL-client.cpp:

          Added static_cast's to avoid warnings from vc8.

Thu Jun 19 16:21:07  2008  Steve Huston  <shuston@riverace.com>

        * ace/CDR_Base.h:
        * ace/CDR_Stream.h: Added a enum to ACE_CDR with the values for
          byte ordering specifier. Moved the setting of ACE_CDR_BYTE_ORDER
          from CDR_Stream.h to CDR_Base.h so it can be used in the enum.
          These make it easier for users to figure out what to do when they
          want to force a specific byte ordering.
          Also did a little more doxygen cleanup.

Thu Jun 19 15:11:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * bin/fuzz.pl:

          Enable ORB_init() 3rd parameter null string check.

Thu Jun 19 14:11:04 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Monitor_Control/BSD_Network_Interface_Monitor.cpp:

          Explicitly #include <sys/ioctl.h> and <net/if.h> for non-inline
          builds.

Wed Jun 18 17:36:34 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * ace/Stack_Trace.cpp:

          Moved pragma disable warning directives from inside of function to
          outside to take effect.

Wed Jun 18 17:27:51  2008  Steve Huston  <shuston@riverace.com>

        * ace/CDR_Stream.h: Some doxygen improvements.

Wed Jun 18 15:36:11 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_orb_tests.lst:

          Added new run_test scripts for the special variants of the TAO
          POA EndpointPolicy test.

Wed Jun 18 13:20:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * bin/fuzz.pl:

          Redo check for wide character incompatabilty ORB_init() miss-use.
          Caters for multi-line ORB_init.

Wed Jun 18 12:16:48 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * bin/PerlACE/Run_Test.pm:
